update: added a script to update bot via `/update_server` command :zap:

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DB_PASS=1234567
 DB_NAME=telegram_bot
 DB_HOST=localhost
 DB_PORT=5432
+
+PULL_COMMAND="git pull origin <branch_name>"
+RESTART_COMMAND="sudo systemctl restart <service_name>"
