feat: added stats to the sheets by scheduling and custom command :sparkles:

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,7 @@ DB_NAME=telegram_bot
 DB_HOST=localhost
 DB_PORT=5432
 
+SHEET_URL=your sheet url
+
 PULL_COMMAND="git pull origin <branch_name>"
 RESTART_COMMAND="sudo systemctl restart <service_name>"
